增加自定义子类接口